including the speaker objects on the sessions
